Landing: Fix widths and replace the video by a image on small screens. Add 'Brochure' to download button

--- a/resources/assets/sass/base.scss
+++ b/resources/assets/sass/base.scss
@@ -1,3 +1,4 @@
 body {
 	font-family: $font-stack;
+	width: 100%;
 }
