--- a/resources/assets/sass/components/landing/about.scss
+++ b/resources/assets/sass/components/landing/about.scss
@@ -1,5 +1,5 @@
 .about {
-    padding: 50px;
+    padding: 30px 20px;
     color: #3C4652;
 
     p {
@@ -24,6 +24,11 @@
     }
 }
 
+@media (min-width: 500px) {
+    .about {
+        padding: 50px;
+    }
+}
 @media (min-width: 992px) {
     .about {
         padding: 40px 85px;
