--- a/resources/assets/sass/components/landing/hero-unit.scss
+++ b/resources/assets/sass/components/landing/hero-unit.scss
@@ -15,7 +15,6 @@
             height: 100%;
             z-index: 3;
             position: absolute;
-            // background: rgba(15,36,68,.5);
             background: linear-gradient(45deg, rgba(45, 11, 88, 0.35) 0%, rgba(10, 44, 88, 0.36) 100%);
         }
 
@@ -37,6 +36,16 @@
             left: 0;
             z-index: 1;
             overflow: hidden;
+            background-position-x: 44%;
+            background-position-y: 50%;
+            background-size: cover;
+            background-repeat-x: no-repeat;
+            background-repeat-y: no-repeat;
+            background-image: url('../../img/landing/video-background.png');
+        }
+
+        iframe {
+            display: none;
         }
 
         .video-bg .video-fg,
@@ -63,7 +72,7 @@
         }
 
         .logo {
-            height: 120px;
+            height: 83px;
         }
 
 
@@ -72,7 +81,7 @@
             font-style: normal;
             padding: 0 20px;
             font-weight: 300;
-            font-size: 29px;
+            font-size: 22px;
             max-width: 22em;
             margin: 25px auto;
 
@@ -91,17 +100,17 @@
 
             li {
                 display: inline-block;
+                padding: 0 12px;
 
                 span {
-                    font-size: 30px;
+                    font-size: 16px;
                     font-weight: 300;
-                    padding: 0 20px;
                     margin-left: -4px;
                 }
 
                 p {
                     color: #DADCE0;
-                    font-size: 14px;
+                    font-size: 13px;
                     text-transform: uppercase;
                 }
             }
@@ -134,7 +143,7 @@
             text-transform: uppercase;
             border: 0;
             border-radius: 0;
-            font-size: 20px;
+            font-size: 18px;
             transition: all .3s;
             margin-top: 30px;
 
@@ -144,7 +153,7 @@
 
             i {
                 display: block;
-                font-size: 40px;
+                font-size: 36px;
                 animation: bounce 4.5s infinite;
             }
         }
@@ -154,11 +163,52 @@
 
 @media (min-width: 550px) {
     .hero {
-        .container .logo {
-            height: 160px;
+        .container {
+
+            .logo {
+                height: 160px;
+            }
+
+            h1 {
+                font-size: 28px;
+            }
+
+            .countdown li {
+                padding: 0 20px;
+
+                span {
+                    font-size: 28px;
+                }
+
+                p {
+                    font-size: 16px;
+                }
+            }
+
+            .btn {
+                font-size: 20px;
+
+                i {
+                    font-size: 40px;
+                }
+            }
         }
     }
 }
+
+@media (min-width: 600px) {
+    .hero .hero-video {
+
+        .video-bg {
+            background-image: none;
+        }
+
+        iframe {
+            display: block;
+        }
+    }
+}
+
 
 @media (min-aspect-ratio: 16/9) {
     .hero .video-bg.cover .video-fg {
